# PrettyPictures

./: .gitignore  Cargo.toml  README.md  prettypix.sublime-project
src/: fractal.rs  gui.rs  main.rs  matfill.rs  sampler.rs  utils.rs
