[package]

name = "mandelbrot"
version = "0.0.1"
authors = [ "Nicolas Feltman <nfeltman@gmail.com>" ]


[dependencies]

time = "0.1"
num = "0.1.36"
num-complex = "0.1.35"
num-traits = "0.1.36"

rayon = "0.5.0"
gtk = "0.1.1"
gdk-pixbuf = "0.1.1"
gdk-sys = "0.3.2"
image = "0.10.4"
pbr = "1.0.0-alpha.1"
threadpool = "1.3.2"
